# agent-teacher

./: .env.example  .gitignore  README.md  docker-compose.yml  verify-stories.ps1
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy.yml
_bmad-output/analysis/: brainstorming-session.md
_bmad-output/implementation-artifacts/: sprint-status.yaml  story-1.1.md  story-1.10.md  story-1.11.md  story-1.12.md  story-1.13.md  story-1.14.md  story-1.15.md  story-1.16.md  story-1.17.md  story-1.18.md  story-1.19.md  story-1.2.md  story-1.20.md  story-1.21.md  story-1.3.md  story-1.4.md  story-1.5.md  story-1.6.md  story-1.7.md  story-1.8.md  story-1.9.md  story-10.1.md  story-10.2.md  story-10.3.md  story-10.4.md  story-11.1.md  story-11.2.md  story-11.3.md  story-11.4.md  story-11.5.md  story-2.1.md  story-2.2.md  story-2.3.md  story-2.4.md  story-2.5.md  story-3.1.md  story-3.2.md  story-3.3.md  story-3.4.md  (+62 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  prd.md  tech-spec-mvp-project-initialization-infrastructure.md  ux-design-specification.md
_bmad-output/planning-artifacts/research/: technical-agent-orchestration-patterns-research.md  technical-autonomous-content-generation-research.md  technical-free-integrations-research.md  technical-multi-agent-architectures-research.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  __init__.py  alembic.ini  package-lock.json  package.json  pyproject.toml
backend/agents/: __init__.py
backend/app/: config.py  main.py
backend/app/api/v1/: admin.py  assessments.py  auth.py  courses.py  health.py  learning.py  progress.py  tutoring.py
backend/app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  base.py  course.py  database.py  module.py  unit.py
backend/app/services/: course_service.py
backend/app/services/knowledge/: supabase_client.py
backend/app/utils/: cache.py  exceptions.py  logger.py  rabbitmq_client.py  redis_client.py
backend/frontend/: package-lock.json
backend/migrations/: env.py
backend/migrations/versions/: 52a323aadef0_test.py
backend/orchestration/: __init__.py
backend/orchestration/workflows/: __init__.py
backend/tests/: conftest.py  test_example.py
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/test-api-imports/: page.tsx
frontend/app/test-env/: page.tsx
frontend/tests/e2e/: playwright.config.ts
scripts/: setup.ps1  setup.sh  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh
